# airlock-skills

./: .gitignore  CHANGELOG.md  README.md  cleanup.md  pyproject.toml  recurring_tasks.md
.cortex/skills/airlock/: SKILL.md
airlock/: SKILL.md
airlock/examples/: draft-spec-from-template.md  submit-file-with-attachment.md  triage-expectation-work.md
airlock/references/: agent-architecture-patterns.md  architecture-playbook.md  procedure-cheat-sheet.md  spec-design.md
airlock/templates/: spec-config-minimal.json  spec-config-with-variant-context.json
airlock_skills/: SKILL.md
airlock_skills/references/: procedure-cheat-sheet.md  spec-design.md
docs/: agent_delegation.md  airlock-skills.md  airlock-tools.md  airlock_cortex_code_skill_guide.md  airlock_spec_design.md  design.md  development.md  mcp_ai_agents_airlock_procedures.md  quickstart-mcp.md  release_process.md  snowflake-managed-mcp.md
scripts/: package_coco_skill.py  validate_skill.py
src/airlock_mcp/: __init__.py  server.py  snowflake_client.py
tests/: test_agent_architecture_docs.py  test_coco_skill_package.py  test_server_safety.py
