[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airlock-skills"
version = "0.2.0"
description = "Agent skills and MCP tools for Airlock's Snowflake stored procedure API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0",
  "snowflake-connector-python>=3.10",
]
authors = [
  { name = "Reunion Studio" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["airlock", "mcp", "snowflake", "agents", "skills"]
license = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/reunionstudio/airlock-skills"
Documentation = "https://reunionstudio.io/airlock/docs/index.html"
Repository = "https://github.com/reunionstudio/airlock-skills"
Issues = "https://github.com/reunionstudio/airlock-skills/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.8",
]

[project.scripts]
airlock-mcp = "airlock_mcp.server:main"
airlock-skills-mcp = "airlock_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/airlock_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
